# ObjectOrientedScripting

./: .gitignore  CMakeLists.txt  InnoSetupScript.iss  KnownIssues.txt  README.md  ToDoForNextRelease.txt  changelog.txt  cstnode.h  data.h  example.ys  index.html  main.cpp  params.json  parser.output  parser.output-noassign  parser.tab.c  parser.tab.h  parser.y  sqo.code-workspace  tokenizer.h
Concept/: OOS_TypeSavety.ebnf  ObjectBase.sqf  SQF_SupportInfo.txt  example.def  example.ebnf  example.oos  example.oos.proj  example.oosproj  example.sqf  objectOrientedSQF.txt  oos.ebnf
ObjectOrientedScripting/: ObjectOrientedScripting.sln  Project.cs
ObjectOrientedScripting/Compiler/: Compiler.cs  Compiler.csproj  ErrorStringResolver.cs  IFinalizable.cs  IInstruction.cs  IVariable.cs  PPDefine.cs  Parser.cs  Parser.cs.old  Scanner.cs  Scanner.cs.old
ObjectOrientedScripting/Logger/: Logger.cs  Logger.csproj
ObjectOrientedScripting/Wrapper/: Compiler.cs  ICompiler.cs  Program.cs  Project.cs  Version.cs  Wrapper.csproj
ObjectOrientedScripting/WrapperUI/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  WrapperUI.csproj
TestProject/: cBar.oos  cFoo.oos  test.oos  test.oos2  test.oosproj
coco/: Parser.frame  Scanner.frame  run.cmd
src/: cstnode.hpp  location.hh  logging.h  logstdout.h  parser.cpp  parser.h  parser.output  parser.tab.cc  parser.tab.hh  parser.y  position.hh  stack.hh  tokenizer.hpp
stdLibrary/: array  config  context  namespace  string  vehicle
stdLibrary/std/: BaseVehicle.oos  Group.oos  ISerializable.oos  Man.oos  Marker.oos  Men.oos  Side.oos  (+7 more)
(+207 files in other folders)
